--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,10 +8,10 @@ title: Home
   <head>
     <meta charset="utf-8" />
     <title>{{ page.title }} | ganiulis</title>
+    <link rel="stylesheet" href="/assets/css/styles.css" />
   </head>
   <body>
-    {% include nav.html %}
-    <h1>{{ page.title }}</h1>
-    {{ content }}
+    <nav>{% include navigation.html items=site.data.navigation.items %}</nav>
+    <main>{{ content }}</main>
   </body>
 </html>
