--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,11 +7,14 @@ title: Home
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>{{ page.title }} | ganiulis</title>
+    <title>personal notes | ganiulis</title>
     <link rel="stylesheet" href="/assets/css/styles.css" />
   </head>
   <body>
-    <nav>{% include navigation.html items=site.data.navigation.items %}</nav>
-    <main>{{ content }}</main>
+    <nav class="boxed">
+      <h1>Topics</h1>
+      {% include navigation.html items=site.data.navigation.items first=true %}
+    </nav>
+    <main class="boxed">{{ content }}</main>
   </body>
 </html>
