--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -1,5 +1,4 @@
 ::-webkit-scrollbar {
-  direction: rtl;
   width: 0.8em;
 }
 
@@ -17,31 +16,40 @@
 
 html {
   font-family: Arial, Helvetica, sans-serif;
-  max-height: 100vh;
   margin: 0;
 }
 
 body {
-  display: flex;
-  max-height: 100vh;
-  margin: 0;
-  gap: 1.5em;
-  padding: 0 9em;
-  background-color: #fffafa;
+  background-color: #f5fefd;
+  overflow-wrap: break-word;
 }
 
-nav {
-  min-width: 25%;
-  overflow: auto;
-  margin: 1em 0;
-  background-color: #f6f1f4;
+@media only screen and (min-width: 768px) {
+  body {
+    margin: 0;
+    max-height: 100vh;
+    display: flex;
+  }
+  nav {
+    margin-right: 1.5em;
+    min-width: 25%;
+    overflow: auto;
+  }
+  main {
+    width: 100%;
+    overflow: auto;
+  }
+  .boxed {
+    padding: 0 1em;
+    border-left: 1px solid black;
+    border-right: 1px solid black;
+  }
 }
 
-main {
-  width: 100%;
-  overflow: auto;
-  margin: 1em 0;
-  background-color: #f6f1f4;
+@media only screen and (min-width: 992px) {
+  body {
+    padding: 0 9em;
+  }
 }
 
 code {
@@ -63,9 +71,4 @@ code {
 .minimal-list {
   list-style: none;
   padding-left: 1em;
-}
-
-.boxed {
-  padding: 0 1em;
-  border: 1px solid black;
 }
