feat: UI improvements

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,11 +18,8 @@ title: Home
   </head>
   <body>
     <nav>
-      <div>
-        <h1>Topics</h1>
-        {% include navigation.html items=site.data.navigation.items first=true
-        %}
-      </div>
+      <h1>Topics</h1>
+      {% include navigation.html items=site.data.navigation.items first=true %}
     </nav>
     <main>
       <article>{{ content }}</article>
