--- a/_sass/code.scss
+++ b/_sass/code.scss
@@ -1,14 +1,19 @@
+$background-color: #404040;
+$symbols-color: #d0d0d0;
+$color1: #ed9d13;
+
 .highlight {
   margin: 12px 0;
   color: whitesmoke;
+  border-radius: 6px;
   overflow: auto;
 }
 .highlight pre {
-  background-color: #404040;
+  background-color: $background-color;
   padding: 12px 24px;
 }
 .highlight .hll {
-  background-color: #404040;
+  background-color: $background-color;
 }
 .highlight .c {
   color: #999999;
@@ -19,26 +24,26 @@
   background-color: #e3d2d2;
 } /* Error */
 .highlight .g {
-  color: #d0d0d0;
+  color: $symbols-color;
 } /* Generic */
 .highlight .k {
   color: #6ab825;
   font-weight: bold;
 } /* Keyword */
 .highlight .l {
-  color: #d0d0d0;
+  color: $symbols-color;
 } /* Literal */
 .highlight .n {
-  color: #d0d0d0;
+  color: $symbols-color;
 } /* Name */
 .highlight .o {
-  color: #d0d0d0;
+  color: $symbols-color;
 } /* Operator */
 .highlight .x {
-  color: #d0d0d0;
+  color: $symbols-color;
 } /* Other */
 .highlight .p {
-  color: #d0d0d0;
+  color: $symbols-color;
 } /* Punctuation */
 .highlight .cm {
   color: #999999;
@@ -61,7 +66,7 @@
   color: #d22323;
 } /* Generic.Deleted */
 .highlight .ge {
-  color: #d0d0d0;
+  color: $symbols-color;
   font-style: italic;
 } /* Generic.Emph */
 .highlight .gr {
@@ -81,7 +86,7 @@
   color: #aaaaaa;
 } /* Generic.Prompt */
 .highlight .gs {
-  color: #d0d0d0;
+  color: $symbols-color;
   font-weight: bold;
 } /* Generic.Strong */
 .highlight .gu {
@@ -115,13 +120,13 @@
   font-weight: bold;
 } /* Keyword.Type */
 .highlight .ld {
-  color: #d0d0d0;
+  color: $symbols-color;
 } /* Literal.Date */
 .highlight .m {
   color: #3677a9;
 } /* Literal.Number */
 .highlight .s {
-  color: #ed9d13;
+  color: $color1;
 } /* Literal.String */
 .highlight .na {
   color: #bbbbbb;
@@ -131,7 +136,6 @@
 } /* Name.Builtin */
 .highlight .nc {
   color: #447fcf;
-  text-decoration: underline;
 } /* Name.Class */
 .highlight .no {
   color: #40ffff;
@@ -140,7 +144,7 @@
   color: #ffa500;
 } /* Name.Decorator */
 .highlight .ni {
-  color: #d0d0d0;
+  color: $symbols-color;
 } /* Name.Entity */
 .highlight .ne {
   color: #bbbbbb;
@@ -149,17 +153,16 @@
   color: #447fcf;
 } /* Name.Function */
 .highlight .nl {
-  color: #d0d0d0;
+  color: $symbols-color;
 } /* Name.Label */
 .highlight .nn {
   color: #447fcf;
-  text-decoration: underline;
 } /* Name.Namespace */
 .highlight .nx {
-  color: #d0d0d0;
+  color: $symbols-color;
 } /* Name.Other */
 .highlight .py {
-  color: #d0d0d0;
+  color: $symbols-color;
 } /* Name.Property */
 .highlight .nt {
   color: #6ab825;
@@ -188,37 +191,37 @@
   color: #3677a9;
 } /* Literal.Number.Oct */
 .highlight .sb {
-  color: #ed9d13;
+  color: $color1;
 } /* Literal.String.Backtick */
 .highlight .sc {
-  color: #ed9d13;
+  color: $color1;
 } /* Literal.String.Char */
 .highlight .sd {
-  color: #ed9d13;
+  color: $color1;
 } /* Literal.String.Doc */
 .highlight .s2 {
-  color: #ed9d13;
+  color: $color1;
 } /* Literal.String.Double */
 .highlight .se {
-  color: #ed9d13;
+  color: $color1;
 } /* Literal.String.Escape */
 .highlight .sh {
-  color: #ed9d13;
+  color: $color1;
 } /* Literal.String.Heredoc */
 .highlight .si {
-  color: #ed9d13;
+  color: $color1;
 } /* Literal.String.Interpol */
 .highlight .sx {
   color: #ffa500;
 } /* Literal.String.Other */
 .highlight .sr {
-  color: #ed9d13;
+  color: $color1;
 } /* Literal.String.Regex */
 .highlight .s1 {
-  color: #ed9d13;
+  color: $color1;
 } /* Literal.String.Single */
 .highlight .ss {
-  color: #ed9d13;
+  color: $color1;
 } /* Literal.String.Symbol */
 .highlight .bp {
   color: #24909d;
