--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -8,7 +8,7 @@
     {% if item.website %}
     <a href="{{ item.website }} " target="_blank"
       >{{ item.title }}
-      <img src="{{ item.baseurl }}/assets/images/external-link.svg"
+      <img src="{{ site.baseurl }}/assets/images/external-link.svg"
     /></a>
     {% elsif item.path and item.items %} {{ item.title }} {% else %}
     <a
