--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -5,27 +5,28 @@ $color-accent-base: #4b9cd3;
 html {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 18px;
-}
-
-body {
-  background-color: gainsboro;
-  color: $color-text-base;
-  overflow-wrap: break-word;
-  margin: 0;
-}
-
-main,
-nav {
-  background-color: $color-background-base;
-  padding-bottom: 16px;
-}
-
-nav > ul {
-  font-size: 16px;
-  font-weight: bold;
-  list-style: none;
-  margin-bottom: 0;
-  padding: 0 16px;
+  body {
+    background-color: gainsboro;
+    color: $color-text-base;
+    overflow-wrap: break-word;
+    margin: 0;
+    nav {
+      padding-top: 8px;
+    }
+    main,
+    nav {
+      background-color: $color-background-base;
+      padding-bottom: 16px;
+    }
+    nav > ul {
+      margin-top: 0;
+    }
+    nav > h2 {
+      font-size: 20px;
+      margin-bottom: 0;
+      padding: 0 16px;
+    }
+  }
 }
 
 .subnav {
@@ -68,6 +69,7 @@ a:hover {
     nav {
       min-width: 25%;
       max-width: 25%;
+      padding-top: 0;
     }
     main {
       margin: 0 16px;
