--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,7 @@ layout: default
     <link
       rel="icon"
       type="image/x-icon"
-      href="{{ site.baseurl }}/assets/images/favicon.ico"
+      href="{{ site.baseurl }}/assets/icons/favicon.ico"
     />
     <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/styles.css" />
   </head>
