--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,6 +8,7 @@ layout: default
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>personal notes | ganiulis</title>
+    <!-- See https://realfavicongenerator.net for details regarding favicons. -->
     <link
       rel="apple-touch-icon"
       sizes="180x180"
