--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,6 +26,7 @@ layout: default
       sizes="16x16"
       href="/assets/icons/favicon-16x16.png"
     />
+    <link rel="manifest" href="/assets/icons/site.webmanifest" />
     <link
       rel="mask-icon"
       href="/assets/icons/safari-pinned-tab.svg"
