--- a/_includes/navigation-tree.html
+++ b/_includes/navigation-tree.html
@@ -6,11 +6,11 @@
   {% endif %} {% for item in include.items %}
   <li>
     {% if item.icon %}
-    <img src="{{ site.baseurl }}/assets/icons/{{ item.icon }}" />
+    <img src="{{ site.baseurl }}/assets/images/{{ item.icon }}" />
     {% endif %} {% if item.website %}
     <a href="{{ item.website }} " target="_blank"
       >{{ item.title }}
-      <img src="{{ site.baseurl }}/assets/icons/external-link.svg"
+      <img src="{{ site.baseurl }}/assets/images/external-link.svg"
     /></a>
     {% elsif item.path and item.items %} {{ item.title }} {% else %}
     <a
