--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,31 +8,11 @@ layout: default
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>personal notes | ganiulis</title>
-    <!-- See https://realfavicongenerator.net for details regarding favicons. -->
-    <link
-      rel="apple-touch-icon"
-      sizes="180x180"
-      href="/assets/images/apple-touch-icon.png"
-    />
     <link
       rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="/assets/images/favicon-32x32.png"
+      type="image/x-icon"
+      href="{{ site.baseurl }}/assets/images/favicon.ico"
     />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="16x16"
-      href="/assets/images/favicon-16x16.png"
-    />
-    <link
-      rel="mask-icon"
-      href="/assets/images/safari-pinned-tab.svg"
-      color="#5bbad5"
-    />
-    <meta name="msapplication-TileColor" content="#da532c" />
-    <meta name="theme-color" content="#ffffff" />
     <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/styles.css" />
   </head>
   <body>
