--- a/_sass/code.scss
+++ b/_sass/code.scss
@@ -8,237 +8,237 @@ $variable-color: #03c03c;
 
 .highlight {
   margin: 12px 0;
-  color: whitesmoke;
+  color: #dbdbdb;
   border-radius: 6px;
-  overflow: auto;
+  pre {
+    background-color: $background-color;
+    padding: 12px 24px;
+    white-space: pre-wrap;
+  }
+  .hll {
+    background-color: $background-color;
+  }
+  .cd {
+    color: #999999;
+    font-style: italic;
+  } /* Comment */
+  .err {
+    color: #a61717;
+    background-color: #e3d2d2;
+  } /* Error */
+  .g {
+    color: $symbols-color;
+  } /* Generic */
+  .k {
+    color: $builtin-color;
+    font-weight: bold;
+  } /* Keyword */
+  .l {
+    color: $symbols-color;
+  } /* Literal */
+  .n {
+    color: $symbols-color;
+  } /* Name */
+  .o {
+    color: $symbols-color;
+  } /* Operator */
+  .x {
+    color: $symbols-color;
+  } /* Other */
+  .p {
+    color: $symbols-color;
+  } /* Punctuation */
+  .cm {
+    color: #999999;
+    font-style: italic;
+  } /* Comment.Multiline */
+  .cp {
+    color: #cd2828;
+    font-weight: bold;
+  } /* Comment.Preproc */
+  .c1 {
+    color: #999999;
+    font-style: italic;
+  } /* Comment.Single */
+  .cs {
+    color: #e50808;
+    font-weight: bold;
+    background-color: #520000;
+  } /* Comment.Special */
+  .gd {
+    color: #d22323;
+  } /* Generic.Deleted */
+  .ge {
+    color: $symbols-color;
+    font-style: italic;
+  } /* Generic.Emph */
+  .gr {
+    color: #d22323;
+  } /* Generic.Error */
+  .gh {
+    color: #ffffff;
+    font-weight: bold;
+  } /* Generic.Heading */
+  .gi {
+    color: #589819;
+  } /* Generic.Inserted */
+  .go {
+    color: #cccccc;
+  } /* Generic.Output */
+  .gp {
+    color: #aaaaaa;
+  } /* Generic.Prompt */
+  .gs {
+    color: $symbols-color;
+    font-weight: bold;
+  } /* Generic.Strong */
+  .gu {
+    color: #ffffff;
+    text-decoration: underline;
+  } /* Generic.Subheading */
+  .gt {
+    color: #d22323;
+  } /* Generic.Traceback */
+  .kc {
+    color: $builtin-color;
+    font-weight: bold;
+  } /* Keyword.Constant */
+  .kd {
+    color: $builtin-color;
+    font-weight: bold;
+  } /* Keyword.Declaration */
+  .kn {
+    color: $builtin-color;
+    font-weight: bold;
+  } /* Keyword.Namespace */
+  .kp {
+    color: $builtin-color;
+  } /* Keyword.Pseudo */
+  .kr {
+    color: $builtin-color;
+    font-weight: bold;
+  } /* Keyword.Reserved */
+  .kt {
+    color: $builtin-color;
+    font-weight: bold;
+  } /* Keyword.Type */
+  .ld {
+    color: $symbols-color;
+  } /* Literal.Date */
+  .m {
+    color: $color2;
+  } /* Literal.Number */
+  .s {
+    color: $color1;
+  } /* Literal.String */
+  .na {
+    color: #bbbbbb;
+  } /* Name.Attribute */
+  .nb {
+    color: #24909d;
+  } /* Name.Builtin */
+  .nc {
+    color: $function-color;
+  } /* Name.Class */
+  .no {
+    color: $variable-color;
+  } /* Name.Constant */
+  .nd {
+    color: #ffa500;
+  } /* Name.Decorator */
+  .ni {
+    color: $symbols-color;
+  } /* Name.Entity */
+  .ne {
+    color: #bbbbbb;
+  } /* Name.Exception */
+  .nf {
+    color: $function-color;
+  } /* Name.Function */
+  .nl {
+    color: $symbols-color;
+  } /* Name.Label */
+  .nn {
+    color: $function-color;
+  } /* Name.Namespace */
+  .nx {
+    color: $symbols-color;
+  } /* Name.Other */
+  .py {
+    color: $symbols-color;
+  } /* Name.Property */
+  .nt {
+    color: $builtin-color;
+    font-weight: bold;
+  } /* Name.Tag */
+  .nv {
+    color: $variable-color;
+  } /* Name.Variable */
+  .ow {
+    color: $builtin-color;
+    font-weight: bold;
+  } /* Operator.Word */
+  .w {
+    color: #666666;
+  } /* Text.Whitespace */
+  .mf {
+    color: $color2;
+  } /* Literal.Number.Float */
+  .mh {
+    color: $color2;
+  } /* Literal.Number.Hex */
+  .mi {
+    color: $color2;
+  } /* Literal.Number.Integer */
+  .mo {
+    color: $color2;
+  } /* Literal.Number.Oct */
+  .sb {
+    color: $color1;
+  } /* Literal.String.Backtick */
+  .sc {
+    color: $color1;
+  } /* Literal.String.Char */
+  .sd {
+    color: $color1;
+  } /* Literal.String.Doc */
+  .s2 {
+    color: $color1;
+  } /* Literal.String.Double */
+  .se {
+    color: $color1;
+  } /* Literal.String.Escape */
+  .sh {
+    color: $color1;
+  } /* Literal.String.Heredoc */
+  .si {
+    color: $color1;
+  } /* Literal.String.Interpol */
+  .sx {
+    color: #ffa500;
+  } /* Literal.String.Other */
+  .sr {
+    color: $color1;
+  } /* Literal.String.Regex */
+  .s1 {
+    color: $color1;
+  } /* Literal.String.Single */
+  .ss {
+    color: $color1;
+  } /* Literal.String.Symbol */
+  .bp {
+    color: #24909d;
+  } /* Name.Builtin.Pseudo */
+  .vc {
+    color: $variable-color;
+  } /* Name.Variable.Class */
+  .vg {
+    color: $variable-color;
+  } /* Name.Variable.Global */
+  .vi {
+    color: $variable-color;
+  } /* Name.Variable.Instance */
+  .il {
+    color: $color2;
+  } /* Literal.Number.Integer.Long */
 }
-.highlight pre {
-  background-color: $background-color;
-  padding: 12px 24px;
-}
-.highlight .hll {
-  background-color: $background-color;
-}
-.highlight .cd {
-  color: #999999;
-  font-style: italic;
-} /* Comment */
-.highlight .err {
-  color: #a61717;
-  background-color: #e3d2d2;
-} /* Error */
-.highlight .g {
-  color: $symbols-color;
-} /* Generic */
-.highlight .k {
-  color: $builtin-color;
-  font-weight: bold;
-} /* Keyword */
-.highlight .l {
-  color: $symbols-color;
-} /* Literal */
-.highlight .n {
-  color: $symbols-color;
-} /* Name */
-.highlight .o {
-  color: $symbols-color;
-} /* Operator */
-.highlight .x {
-  color: $symbols-color;
-} /* Other */
-.highlight .p {
-  color: $symbols-color;
-} /* Punctuation */
-.highlight .cm {
-  color: #999999;
-  font-style: italic;
-} /* Comment.Multiline */
-.highlight .cp {
-  color: #cd2828;
-  font-weight: bold;
-} /* Comment.Preproc */
-.highlight .c1 {
-  color: #999999;
-  font-style: italic;
-} /* Comment.Single */
-.highlight .cs {
-  color: #e50808;
-  font-weight: bold;
-  background-color: #520000;
-} /* Comment.Special */
-.highlight .gd {
-  color: #d22323;
-} /* Generic.Deleted */
-.highlight .ge {
-  color: $symbols-color;
-  font-style: italic;
-} /* Generic.Emph */
-.highlight .gr {
-  color: #d22323;
-} /* Generic.Error */
-.highlight .gh {
-  color: #ffffff;
-  font-weight: bold;
-} /* Generic.Heading */
-.highlight .gi {
-  color: #589819;
-} /* Generic.Inserted */
-.highlight .go {
-  color: #cccccc;
-} /* Generic.Output */
-.highlight .gp {
-  color: #aaaaaa;
-} /* Generic.Prompt */
-.highlight .gs {
-  color: $symbols-color;
-  font-weight: bold;
-} /* Generic.Strong */
-.highlight .gu {
-  color: #ffffff;
-  text-decoration: underline;
-} /* Generic.Subheading */
-.highlight .gt {
-  color: #d22323;
-} /* Generic.Traceback */
-.highlight .kc {
-  color: $builtin-color;
-  font-weight: bold;
-} /* Keyword.Constant */
-.highlight .kd {
-  color: $builtin-color;
-  font-weight: bold;
-} /* Keyword.Declaration */
-.highlight .kn {
-  color: $builtin-color;
-  font-weight: bold;
-} /* Keyword.Namespace */
-.highlight .kp {
-  color: $builtin-color;
-} /* Keyword.Pseudo */
-.highlight .kr {
-  color: $builtin-color;
-  font-weight: bold;
-} /* Keyword.Reserved */
-.highlight .kt {
-  color: $builtin-color;
-  font-weight: bold;
-} /* Keyword.Type */
-.highlight .ld {
-  color: $symbols-color;
-} /* Literal.Date */
-.highlight .m {
-  color: $color2;
-} /* Literal.Number */
-.highlight .s {
-  color: $color1;
-} /* Literal.String */
-.highlight .na {
-  color: #bbbbbb;
-} /* Name.Attribute */
-.highlight .nb {
-  color: #24909d;
-} /* Name.Builtin */
-.highlight .nc {
-  color: $function-color;
-} /* Name.Class */
-.highlight .no {
-  color: $variable-color;
-} /* Name.Constant */
-.highlight .nd {
-  color: #ffa500;
-} /* Name.Decorator */
-.highlight .ni {
-  color: $symbols-color;
-} /* Name.Entity */
-.highlight .ne {
-  color: #bbbbbb;
-} /* Name.Exception */
-.highlight .nf {
-  color: $function-color;
-} /* Name.Function */
-.highlight .nl {
-  color: $symbols-color;
-} /* Name.Label */
-.highlight .nn {
-  color: $function-color;
-} /* Name.Namespace */
-.highlight .nx {
-  color: $symbols-color;
-} /* Name.Other */
-.highlight .py {
-  color: $symbols-color;
-} /* Name.Property */
-.highlight .nt {
-  color: $builtin-color;
-  font-weight: bold;
-} /* Name.Tag */
-.highlight .nv {
-  color: $variable-color;
-} /* Name.Variable */
-.highlight .ow {
-  color: $builtin-color;
-  font-weight: bold;
-} /* Operator.Word */
-.highlight .w {
-  color: #666666;
-} /* Text.Whitespace */
-.highlight .mf {
-  color: $color2;
-} /* Literal.Number.Float */
-.highlight .mh {
-  color: $color2;
-} /* Literal.Number.Hex */
-.highlight .mi {
-  color: $color2;
-} /* Literal.Number.Integer */
-.highlight .mo {
-  color: $color2;
-} /* Literal.Number.Oct */
-.highlight .sb {
-  color: $color1;
-} /* Literal.String.Backtick */
-.highlight .sc {
-  color: $color1;
-} /* Literal.String.Char */
-.highlight .sd {
-  color: $color1;
-} /* Literal.String.Doc */
-.highlight .s2 {
-  color: $color1;
-} /* Literal.String.Double */
-.highlight .se {
-  color: $color1;
-} /* Literal.String.Escape */
-.highlight .sh {
-  color: $color1;
-} /* Literal.String.Heredoc */
-.highlight .si {
-  color: $color1;
-} /* Literal.String.Interpol */
-.highlight .sx {
-  color: #ffa500;
-} /* Literal.String.Other */
-.highlight .sr {
-  color: $color1;
-} /* Literal.String.Regex */
-.highlight .s1 {
-  color: $color1;
-} /* Literal.String.Single */
-.highlight .ss {
-  color: $color1;
-} /* Literal.String.Symbol */
-.highlight .bp {
-  color: #24909d;
-} /* Name.Builtin.Pseudo */
-.highlight .vc {
-  color: $variable-color;
-} /* Name.Variable.Class */
-.highlight .vg {
-  color: $variable-color;
-} /* Name.Variable.Global */
-.highlight .vi {
-  color: $variable-color;
-} /* Name.Variable.Instance */
-.highlight .il {
-  color: $color2;
-} /* Literal.Number.Integer.Long */
