--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -2,9 +2,11 @@ $color-text-base: #111;
 $color-background-base: whitesmoke;
 $color-accent-base: #4b9cd3;
 
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap");
+
 html {
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 18px;
+  font-family: "Open Sans", Arial, Helvetica, sans-serif;
+  font-size: 17px;
   body {
     background-color: gainsboro;
     color: $color-text-base;
