--- a/_includes/navigation-tree.html
+++ b/_includes/navigation-tree.html
@@ -5,11 +5,11 @@
   </li>
   {% endif %} {% for item in include.items %}
   <li>
-    {% if item.icon %}
-    <img src="{{ site.baseurl }}/assets/images/{{ item.icon }}" />
-    {% endif %} {% if item.website %}
+    {% if item.website %}
     <a href="{{ item.website }} " target="_blank"
-      >{{ item.title }}
+      >{% if item.icon %}<img
+        src="{{ site.baseurl }}/assets/images/{{ item.icon }}" />{% endif %} {{
+      item.title }}
       <img src="{{ site.baseurl }}/assets/images/external-link.svg"
     /></a>
     {% elsif item.path and item.items %} {{ item.title }} {% else %}
